aggiungo foto von vue

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div id="app">
 
         <h1>{{message}}</h1>
+        <img :src="immagine" alt="">
 
-        <div class="img">{{image}}</div>
 
        
     </div>
